--- a/Maanfee.JsInterop.Examples/Maanfee.JsInterop.Examples.Client/_Imports.razor
+++ b/Maanfee.JsInterop.Examples/Maanfee.JsInterop.Examples.Client/_Imports.razor
@@ -13,3 +13,5 @@
 @inject Maanfee.JsInterop.Dom Dom
 @inject Maanfee.JsInterop.LocalStorage LocalStorage
 @inject Maanfee.JsInterop.Fullscreen Fullscreen
+@inject Maanfee.JsInterop.Print Print
+@inject Maanfee.JsInterop.FileDownload FileDownload
