--- a/Maanfee.JsInterop.Examples/Maanfee.JsInterop.Examples.Client/Layout/NavMenu.razor
+++ b/Maanfee.JsInterop.Examples/Maanfee.JsInterop.Examples.Client/Layout/NavMenu.razor
@@ -4,20 +4,23 @@
         <MudText Typo="Typo.h6" Class="px-4">JsIntrop</MudText>
         <MudDivider Class="my-2" />
         <MudNavLink Match="NavLinkMatch.Prefix" Href="/">Dashboard</MudNavLink>
-        <MudNavGroup Title="Manipulation" Expanded="true">
+        <MudNavGroup Title="Manipulation">
             <MudNavLink Href="/TextView">Text</MudNavLink>
             <MudNavLink Href="/HTMLView">HTML</MudNavLink>
             <MudNavLink Href="/ValView">Val</MudNavLink>
             <MudNavLink Href="/AttrView">Attr</MudNavLink>
             <MudNavLink Href="/CSSView">CSS</MudNavLink>
-            <MudNavLink Href="/AddClassView">AddClass</MudNavLink>
-            <MudNavLink Href="/RemoveClassView">RemoveClass</MudNavLink>
+            <MudNavLink Href="/ClassView">Class</MudNavLink>
+        @*     <MudNavLink Href="/RemoveClassView">RemoveClass</MudNavLink> *@
 
         </MudNavGroup>
-        <MudNavGroup Title="Events" Expanded="true">
+        <MudNavGroup Title="Events">
+            <MudNavLink Href="/EventListenerView">Event Listener</MudNavLink>
             <MudNavLink Href="/ClickView">Click</MudNavLink>
         </MudNavGroup>
         <MudNavLink Href="/LocalStorageView">LocalStorage</MudNavLink>
         <MudNavLink Href="/FullscreenView">Fullscreen</MudNavLink>
+        <MudNavLink Href="/PrintView">Print</MudNavLink>
+        <MudNavLink Href="/DownloadView">Download</MudNavLink>
     </MudNavMenu>
 </MudPaper>
